--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Fuse Angular - Angular Template and Starter Kit</title>
+        <title>StrongMind - Pizza Application</title>
         <meta charset="utf-8">
         <meta
             name="description"
@@ -14,16 +14,6 @@
             content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0">
 
         <base href="./">
-
-        <!-- Favicon -->
-        <link
-            rel="icon"
-            type="image/png"
-            href="favicon-16x16.png">
-        <link
-            rel="icon"
-            type="image/png"
-            href="favicon-32x32.png">
 
         <!-- Fonts -->
         <link
